Fix checkbox group gap

--- a/client/dashboard/profile-wizard/style.scss
+++ b/client/dashboard/profile-wizard/style.scss
@@ -211,7 +211,7 @@
 	}
 
 	.woocommerce-profile-wizard__checkbox-group {
-		margin: -$gap -$gap 0 -$gap;
+		margin: #{-$gap} #{-$gap} 0 -#{$gap};
 
 		.muriel-checkbox {
 			margin-top: 0;
